2-network-policies/web-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-console
  namespace: default
  labels:
    app: web-console
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web-console
